--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>hoge</title>
   </head>
   <body>
-    <!-- comment -->
+    <a href="https://yellow-alone.github.io/index.html">HOME</a><br>
+    <a href="https://yellow-alone.github.io/test">go to the test</a>
   </body>
 </html>
