--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <a href="https://yellow-alone.github.io/index.html">HOME</a><br>
-    <a href="https://yellow-alone.github.io/test">go to the test</a>
+    <a href="https://yellow-alone.github.io/test_test_test">go to the test</a>
   </body>
 </html>
